# Asciiweb

./: .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  test-wasm.js  tsconfig.json  vite.config.ts  wrangler.toml
.github/workflows/: build-wasm.yml
functions/api/: rooms.ts  signal.ts
functions/api/rooms/: [code].ts
public/: _headers  manifest.json  sw.js  watch.html
public/wasm/: asciiweb_wasm.d.ts  asciiweb_wasm.js  asciiweb_wasm_bg.wasm  asciiweb_wasm_bg.wasm.d.ts  package.json
src/: App.tsx  index.css  types.ts
src/components/: AboutTab.tsx  CallTab.tsx  CameraTab.tsx  ControlsPanel.tsx  ImageTab.tsx  LibraryTab.tsx  Modal.tsx  Player.tsx
src/components/atv/: AtvPlayer.tsx
src/lib/: adaptive-quality.ts  ascii.ts  ascii.worker.ts  binary.ts  call.ts  capture.ts  export.ts  format.ts  glyph-atlas.ts  library.ts  wasm-wrapper.ts  webgl-renderer.ts  worker-manager.ts
src/lib/atv/: analysis.ts  codec.ts  entropy.ts  glyphs.ts  index.ts  motion.ts  palette.ts
src/lib/wasm-pkg/: asciiweb_wasm_bg.wasm.d.ts
wasm-module/: Cargo.toml  README.md  build-wasm.sh
wasm-module/.cargo/: config.toml
wasm-module/pkg/: asciiweb_wasm.js  asciiweb_wasm_bg.wasm
wasm-module/src/: lib.rs
