[package]
name = "asciiweb-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly acceleration for AsciiWeb image processing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
