[package]
name = "asciiweb_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Enable SIMD for WebAssembly

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
